syntax = "proto3";

package User;

option go_package = "Progression_service_GO/gRPC;user";

service UserService {
    rpc GetUsersProfile (GetUserDetailsRequest) returns (GetUserDetailsResponse);
}

message GetUserDetailsRequest {
    repeated string userId = 1;
}

message GetUserDetailsResponse {
    repeated UserProfile profiles = 1;
}

message UserProfile {
    string id = 1;
    string display_name = 2;
    string email = 3;
    string user_role = 4;
}